ctxmap-tests/tests/compile_fail/with_immut_key_mut.stderr
error[E0308]: mismatched types
   --> tests/compile_fail/with_immut_key_mut.rs:7:12
    |
7   |     m.with(&KEY_A, &10, |_| {});
    |       ---- ^^^^^^ expected `false`, found `true`
    |       |
    |       arguments to this function are incorrect
    |
    = note: expected reference `&'static Key<_, {integer}>`
               found reference `&Key<main::Schema, u8, true>`
note: associated function defined here
   --> $WORKSPACE/ctxmap/src/lib.rs
    |
    |     pub fn with<T: ?Sized, U>(
    |            ^^^^
